--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.47",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "vue-loader": "^17.0.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "typescript": "^4.9.5",
+    "vue": "^3.2.36"
   }
 }
