--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve"
+    "build": "webpack --config webpack.config.js",
+    "serve": "webpack serve --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@vue/compiler-sfc": "^3.2.47",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
