--- a/package.json
+++ b/package.json
@@ -5,26 +5,33 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "serve": "webpack serve --config webpack.config.js"
+    "serve": "webpack-dev-server --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@vue/compiler-sfc": "^3.2.47",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^8.0.0",
+    "rimraf": "^4.1.3",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "vue-loader": "^17.0.1",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@vue/runtime-core": "^3.2.47",
+    "pinia": "^2.0.32",
     "typescript": "^4.9.5",
-    "vue": "^3.2.36"
+    "vue": "^3.2.36",
+    "vue-router": "^4.1.6"
   }
 }
